# Invoice_Handler

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
invoice_handler/: gmail_handler.py  log_functions.py  notion_handler.py  read_pdf.py  reservation_model.py
