[tool.poetry]
name = "invoice-handler"
version = "0.1.0"
description = ""
authors = ["Aleksandr Zubkov <aleksandr.zubkov.neuro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fitz = "^0.0.1.dev2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
